clear trash file

--- a/gap-groupe13/stm32cubeide/.project
+++ b/gap-groupe13/stm32cubeide/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gap_project</name>
+	<name>gap-project13</name>
 	<comment></comment>
 	<projects>
 		<project>libgapcom</project>
