--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,29 @@
-*/Middlewares/
-*/Drivers/
-*.ioc
+**/Middlewares/
+**/Drivers/
+**.ioc
 
-*/build/
-*/Debug/
-*/Release/
-*/obj/
+**/build/
+**/Debug/
+**/Release/
+**/obj/
 
-/.settings/
-/.cproject
-/.project
-/.mxproject
+**/.settings/
 
-*.elf
-*.hex
-*.bin
-*.map
-*.lst
-*.o
-*.d
-*.su
-*.cyclo
+**/*.elf
+**/*.hex
+**/*.bin
+**/*.map
+**/*.lst
+**/*.o
+**/*.d
+**/*.su
+**/*.cyclo
 
 
-*.uvguix.*
-*.uvoptx
-*.uvprojx
-*.eww
-*.ewp
-*.ewt
+**/*.uvguix.*
+**/*.uvoptx
+**/*.uvprojx
+**/*.eww
+**/*.ewp
+**/*.ewt
 
-*.launch
