--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,11 @@
 **/*.d
 **/*.su
 **/*.cyclo
-
+**/*.launch
+**/*.settings
+**/*.project
+**/*.cproject
+**/*.mxproject
 
 **/*.uvguix.*
 **/*.uvoptx
